--- a/src/httpdocs/css/splash.css
+++ b/src/httpdocs/css/splash.css
@@ -74,7 +74,7 @@
   color: #7DA8CC;
 }
 .arrow-button{
-  background-image: url('/splash/images/arrow-button.png');
+  background-image: url('../splash/images/arrow-button.png');
   background-position:center right;
   margin-top: 10px;
   padding: 10px 20px 10px 10px;
